# moving_to_poetry

./: README.md  conf.py  pyproject.toml
.github/workflows/: main.yml
_build/doctrees/: environment.pickle  index.doctree  modules.doctree
_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.rst.txt  modules.rst.txt
function/: common_prefix.py
moving_to_poetry/: common_prefix.py
tests/: test_common_prefix.py
